# ML4T

./: README.md  pyproject.toml
src/course/: lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_6.py  lesson_7.py  lesson_8.py
src/lessons/: lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_7.py
tests/: test_course.py
