[tool.poetry]
name = "course"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
